--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -2,7 +2,6 @@
 // Basic
 // -----------------------------------------------------------------------------
 
-
 html,
 body {
   height: 100%;
@@ -14,14 +13,16 @@ html {
   &.color-theme-in-transition *,
   &.color-theme-in-transition *::before,
   &.color-theme-in-transition *::after {
-    transition: all .5s ease-in-out !important;
+    transition:
+      background-color .5s ease-in-out,
+      color .1s ease !important;
   }
 }
 // stylelint-enable
 
 body {
-  background-color: var(--body-background-color);
-  color: var(--text-color);
+  background-color: var(--body-background-color, $gray-800);
+  color: var(--text-color, $gray-100);
 }
 
 img {
