--- a/src/scss/includes/_theme-mode.scss
+++ b/src/scss/includes/_theme-mode.scss
@@ -4,6 +4,12 @@
 // Dark Theme is default
 
 :root {
+  // Apply a default color scheme
+  @media (color-index: 22) { // prefers-color-scheme: no-preference
+    // code here
+  }
+
+  // Apply a dark color scheme
   @media (color-index: 48) { // prefers-color-scheme: dark
     --body-background-color: #{$gray-800};
     --background-color-normal: #{darken($gray-800, 5%)};
@@ -14,6 +20,7 @@
     --drawer-header-background-color: #{$gray-900};
   }
 
+  // Apply a light color scheme
   @media (color-index: 70) { // prefers-color-scheme: light
     --body-background-color: #{$gray-100};
     --background-color-normal: #{darken($gray-100, 5%)};
