--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -18,11 +18,11 @@ section.contact.text-center#contact
           .form-group.d-none
             .input
               label(for="bot-field") Don’t fill this out if you're human
-              input.form-control#bot-field(type="text" name="bot-field" autocomplete="off")
+              input.form-control#contact-bot-field(type="text" name="bot-field" autocomplete="off")
 
           .form-group
             .input
-              input.form-control#name(
+              input.form-control#contact-name(
                 type="text" name="name" maxlength="50" placeholder="Your name"
                 pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$"
                 title="Please enter a valid name." aria-label="Your name" required)
@@ -32,7 +32,7 @@ section.contact.text-center#contact
 
           .form-group
             .input
-              input.form-control#email(
+              input.form-control#contact-email(
                 type="email" name="email" maxlength="100" placeholder="Your email"
                 pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$"
                 title="Please enter a valid email" aria-label="Your email" required)
@@ -42,7 +42,7 @@ section.contact.text-center#contact
 
           .form-group
             .input
-              input.form-control#phone(
+              input.form-control#contact-phone(
                 type="tel" name="phone" maxlength="20" placeholder="Your phone"
                 pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$"
                 title="0000 000 000 or +40 000 000 000." aria-label="Your phone" required)
@@ -52,7 +52,7 @@ section.contact.text-center#contact
 
           .form-group
             .input
-              input.form-control#subject(
+              input.form-control#contact-subject(
                 type="text" name="subject" maxlength="100" placeholder="Your subject"
                 pattern=".{1,100}"
                 title="Maximum 100 characters." aria-label="Your subject" required)
@@ -62,7 +62,7 @@ section.contact.text-center#contact
 
           .form-group
             .input
-              textarea.form-control#message(
+              textarea.form-control#contact-message(
                 name="message" rows="6" maxlength="600" placeholder="Your message"
                 title="Maximum 600 characters." aria-label="Your message" required)
               label(for="message") Message #[span.required *]
@@ -71,7 +71,7 @@ section.contact.text-center#contact
 
           .form-group
             .form-check
-              input.form-check-input#terms-check(type="checkbox" value="" required)
+              input.form-check-input#contact-terms-check(type="checkbox" value="" required)
               label.form-check-label(for="terms-check") Agree to terms and conditions
               .valid-feedback Looks good!
               .invalid-feedback You must agree before submitting.
