--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -14,10 +14,10 @@ section.newsletter.text-center#newsletter
           //- HONEYPOT FIELD
           .form-group.d-none
             label(for="bot-field") Don’t fill this out if you're human
-            input.form-control#bot-field(type="text" name="bot-field" autocomplete="off")
+            input.form-control#news-bot-field(type="text" name="bot-field" autocomplete="off")
 
           .form-group
-            input.form-control.rounded-left#name(
+            input.form-control.rounded-left#news-name(
               type="text" name="name" maxlength="50" placeholder="Your name"
               pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$"
               title="Please enter a valid name." aria-label="Your name" required)
@@ -26,7 +26,7 @@ section.newsletter.text-center#newsletter
             .invalid-feedback Please enter a valid name.
 
           .form-group
-            input.form-control#email(
+            input.form-control#news-email(
               type="email" name="email" placeholder="your@email.here"
               pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$"
               title="Please enter a valid email" aria-label="your@email.here" required)
