chore(vendor): update uniKorn files

--- a/src/scss/unikorn/components/_carousel.scss
+++ b/src/scss/unikorn/components/_carousel.scss
@@ -132,7 +132,7 @@
   display: inline-block;
   width: $carousel-control-icon-width;
   height: $carousel-control-icon-width;
-  background: transparent no-repeat 50% / 100% 100%;
+  background: no-repeat 50% / 100% 100%;
 }
 
 .carousel-control-prev-icon {
