--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -5,9 +5,12 @@ block external-js
 
 block vendors-js
   //--- Vendors main JS
-  //- jQuery 3.4.1, popper.js 1.16.0, unikorn 1.0.0
+  //- jQuery 3.5.1, popper.js 1.16.1, unikorn 1.0.0
   //- yall.js 3.1.7, browser.js 4.0.0, cookieconsent 3.1.1
-  script#vendors(defer src="js/vendor/main.js")
+  if entry.inline
+    script#vendors(defer src="js/vendor/main.min.js")
+  else
+    script#vendors(defer src="js/vendor/main.js")
 
 block custom-js
   //--- Main Script
