--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -40,6 +40,10 @@ h1, h2, h3, h4, h5, h6 { font-family: Aclonica, sans-serif; } // stylelint-disab
   flex-direction: column;
 }
 
+.navbar-toggler {
+  transition: all .5s ease-in-out;
+}
+
 // Cookie consent
 .cc-window {
   background: #252e39;
