--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -54,7 +54,7 @@
     color: #f8f9fa;
     font-size: 1.5rem;
     text-align: center;
-    transition: .5s;
+    transition: all .5s ease-in-out;
     cursor: pointer;
 
     svg {
