chore(fonts): update fontawesome css file

--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -25,8 +25,9 @@
 }
 
 /*
- * Font Awesome Free 5.11.2 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 5.14.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
+ * File: svg-with-js.css
  * -------------------------------------------------------------------------- */
 svg:not(:root).svg-inline--fa {
   overflow: visible; }
