--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -32,4 +32,5 @@ html(lang="en" prefix="og: http://ogp.me/ns#")
       include ../includes/forms/_modal-get-quote
     include ../includes/misc/_back-to-top
     block scripts
+      include ../partials/_tawk
       include ../partials/_scripts
