refactor(images): change picture wrapper

--- a/src/scss/mixins/_picture.scss
+++ b/src/scss/mixins/_picture.scss
@@ -6,9 +6,8 @@
   position: relative;
   display: block;
   height: auto;
-
-  // Intrisic ratio
-  padding-bottom: percentage(nth($ratio, 2) / nth($ratio, 1));
+  padding-bottom: percentage(nth($ratio, 2) / nth($ratio, 1)); // Intrisic ratio
+  background-color: var(--background-color-normal);
 }
 
 @mixin child() {
