--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,7 +40,4 @@
 @import "components/form";
 @import "components/misc";
 
-@import "pages/info";
-@import "pages/portfolio";
-@import "pages/services";
-@import "pages/contact";
+@import "pages/pages";
