--- a/src/views/includes/pages/_info.pug
+++ b/src/views/includes/pages/_info.pug
@@ -5,7 +5,7 @@ section.info#info-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +infoPicture("dawn_desktop_background_dusk", "Performance")
+        +featuresPicture("info", "dawn_desktop_background_dusk", "jpg", "Performance")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Performance
         p.mb-3.font-weight-bold.
@@ -20,7 +20,7 @@ section.info#info-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +infoPicture("architecture_blur_building_exterior", "Audit Ready")
+        +featuresPicture("info", "architecture_blur_building_exterior", "jpg", "Audit Ready")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Audit Ready
         p.mb-3.font-weight-bold.
@@ -35,7 +35,7 @@ section.info#info-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +infoPicture("sea_waves_rocks_beach_sunrise", "SEO Ready")
+        +featuresPicture("info", "sea_waves_rocks_beach_sunrise", "jpg", "SEO Ready")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left SEO Ready
         p.mb-3.font-weight-bold.
@@ -50,7 +50,7 @@ section.info#info-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +infoPicture("wallpaper_autumn_branches", "Best practices")
+        +featuresPicture("info", "wallpaper_autumn_branches", "jpg", "Best practices")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Best practices
         p.mb-3.font-weight-bold.
@@ -65,7 +65,7 @@ section.info#info-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +infoPicture("clouds_daylight_forest", "Accessibility")
+        +featuresPicture("info", "clouds_daylight_forest", "jpg", "Accessibility")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Accessibility
         p.mb-3.font-weight-bold.
@@ -80,7 +80,7 @@ section.info#info-6
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +infoPicture("background_beautiful_clouds", "Responsive design")
+        +featuresPicture("info", "background_beautiful_clouds", "jpg", "Responsive design")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Responsive design
         p.mb-3.font-weight-bold.
