--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -5,7 +5,7 @@ section.portfolio#portfolio-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +portfolioPicture("unikorn", "UniKorn")
+        +featuresPicture("portfolio", "unikorn", "png", "UniKorn")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left UniKorn
         p.mb-0 Frontend framework for designing websites and web applications.
@@ -26,7 +26,7 @@ section.portfolio#portfolio-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +portfolioPicture("respo", "Respo")
+        +featuresPicture("portfolio", "respo", "png", "Respo")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Respo
         p.mb-0 Responsive design check tool, see how websites looks on different devices.
@@ -47,7 +47,7 @@ section.portfolio#portfolio-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +portfolioPicture("webmagia", "WebMagia")
+        +featuresPicture("portfolio", "webmagia", "png", "WebMagia")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left WebMagia
         p.mb-0 High Quality WordPress Premium Templates.
@@ -67,7 +67,7 @@ section.portfolio#portfolio-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +portfolioPicture("timero", "Timero")
+        +featuresPicture("portfolio", "timero", "png", "Timero")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Timero
         p.mb-0 A fresh way to save your time, without any distraction.
