--- a/src/views/includes/pages/_services.pug
+++ b/src/views/includes/pages/_services.pug
@@ -5,7 +5,7 @@ section.services#services-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +servicesPicture("landscape_tree_black", "Web Design")
+        +featuresPicture("services", "landscape_tree_black", "jpg", "Web Design")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Design
         p.mb-3.font-weight-bold.
@@ -19,7 +19,7 @@ section.services#services-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +servicesPicture("lighthouse_lantern_sky_storm_night", "Web Development")
+        +featuresPicture("services", "lighthouse_lantern_sky_storm_night", "jpg", "Web Development")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Development
         p.mb-3.font-weight-bold.
@@ -33,7 +33,7 @@ section.services#services-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +servicesPicture("road_sunset_marking_grass", "Mobile Apps")
+        +featuresPicture("services", "road_sunset_marking_grass", "jpg", "Mobile Apps")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Mobile Apps
         p.mb-3.font-weight-bold.
@@ -47,7 +47,7 @@ section.services#services-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +servicesPicture("sunset_sun_clouds", "Web Applications")
+        +featuresPicture("services", "sunset_sun_clouds", "jpg", "Web Applications")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Applications
         p.mb-3.font-weight-bold.
@@ -61,7 +61,7 @@ section.services#services-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +servicesPicture("sea_surf_wave_sunset", "Smart Solutions")
+        +featuresPicture("services", "sea_surf_wave_sunset", "jpg", "Smart Solutions")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Smart Solutions
         p.mb-3.font-weight-bold.
