refactor(share): update open graph markup

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,7 +2,7 @@
 extends layout/_base
 
 prepend setting
-  - title = 'Adorade - Web Design Company';
+  - title = '';
   - description = '';
   - currentUrl = 'index.html';
 
