build(styles): update vendor styles task

--- a/src/views/partials/_styles.pug
+++ b/src/views/partials/_styles.pug
@@ -7,7 +7,7 @@ block vendors-css
   //--- Vendors main CSS
   //- animate.min.css 3.7.2, cookieconsent 3.1.1
   if entry.inline
-    link#inline-vendors-css(rel="stylesheet" href="css/vendors.min.css" inline)
+    link#inline-vendors-css(href="css/vendors.min.css" inline)
   else
     link#vendors-css(rel="stylesheet" href="css/vendors.min.css")
 
