chore(icons): update website favicon

--- a/src/views/modules/drawer/_drawer.pug
+++ b/src/views/modules/drawer/_drawer.pug
@@ -7,7 +7,7 @@ include ../../mixins/_pictures
     .drawer-content
       .drawer-header
         a.drawer-logo(href="./")
-          +drawerLogo("logo-adorade-drawer", "Adorade")
+          +drawerLogo("logo-drawer", "Adorade")
         button.close(type="button" role="button" data-dismiss="drawer" aria-label="Close Drawer")
           //- i.fas.fa-times
           img.svg-inline--fa#fa-times(src="fonts/svgs/solid/times.svg" alt="times" inline)
