--- a/src/scss/includes/_animation.scss
+++ b/src/scss/includes/_animation.scss
@@ -13,3 +13,35 @@
   100% { opacity: .2; }
   50% { opacity: .8; }
 }
+
+// For Forms validation
+@keyframes shakeX {
+  from,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translate3d(10px, 0, 0);
+  }
+}
+
+.shakeX {
+  animation-name: shakeX;
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
