--- a/src/views/partials/_styles.pug
+++ b/src/views/partials/_styles.pug
@@ -5,7 +5,7 @@ block external-css
 
 block vendors-css
   //--- Vendors main CSS
-  //- animate.min.css 4.1.1, cookieconsent 3.1.1
+  //- cookieconsent 3.1.1
   if entry.inline
     link#inline-vendors-css(href="css/vendors.min.css" inline)
   else
