--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -1,9 +1,11 @@
 //- includes/sections/_hero.pug
 section.hero#hero
   .hero-unit
-    .hero-content.clip-bg.clip-text
-      h1.branding.mb-0 Adorade
-      .rotate#rotate
+    .hero-image
+    .hero-overlay
+    .hero-content.text-center
+      h1.hero-title.mb-0 Adorade
+      .hero-desc
         h2.mb-0.rotate-text Web Design
         h2.mb-0.rotate-text Web Development
         h2.mb-0.rotate-text Mobile Development
