chore(images): change hero and parallax image

--- a/src/views/includes/sections/_parallax.pug
+++ b/src/views/includes/sections/_parallax.pug
@@ -3,7 +3,7 @@ include ../../mixins/_pictures
 
 section.parallax#parallax
   .parallax-window
-    +parallaxPicture("grass_field_dawn", "Good Morning")
+    +parallaxPicture("pine_trees_under_blue_sky_1920x1080", "Pine Trees Under Blue Sky")
     .parallax-overlay
       .container
         .row
