--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -1,11 +1,14 @@
 //- partials/_analytics.pug
 if entry.inline
-  //--- Google Analytics (analytics.js) - Async tracking snippet
+  //--- Global site tag (gtag.js) - Google Analytics
+  script(async src="https://www.googletagmanager.com/gtag/js?id=UA-39823263-1")
   script.
-    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', 'UA-39823263-1', 'auto', {
-      //- Set the user ID using signed-in user_id.
-      userId: 'Us19Er69'
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-39823263-1');
+    gtag('set', {
+      'user_id': 'Us19Er69',
+      'cookie_flags': 'SameSite=None;Secure'
     });
-    ga('send', 'pageview');
-  script(async src="https://www.google-analytics.com/analytics.js")
