chore(analytics): fix `user_id` config
Close #301

--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -6,9 +6,9 @@ if entry.inline
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
-    gtag('config', 'UA-39823263-1');
+    gtag('config', 'UA-39823263-1', {
+      'user_id': 'Us19Er69'
+    });
     gtag('set', {
-      'user_id': 'Us19Er69',
       'cookie_flags': 'SameSite=None;Secure'
     });
