--- a/src/views/partials/_preconnect.pug
+++ b/src/views/partials/_preconnect.pug
@@ -3,4 +3,5 @@ if entry.inline
   link(rel="preconnect" href="https://stats.g.doubleclick.net" crossorigin)
   link(rel="preconnect" href="https://www.google.ro" crossorigin)
   link(rel="preconnect" href="https://www.google.com" crossorigin)
+  link(rel="preconnect" href="https://www.google-analytics.com" crossorigin)
   link(rel="preconnect" href="https://www.googletagmanager.com" crossorigin)
