refactor(analytics): update auto-track code

--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -11,12 +11,12 @@ section.portfolio#portfolio-1
         p.mb-0 Frontend framework for designing websites and web applications.
         p.mb-4.font-weight-bold #node #yarn #git #gulp #scss #es6 #pug
         .buttons-wrapper
-          a.btn.btn-info.mr-2.outbound-link(
+          a.btn.btn-info.mr-2.external-link(
             href="https://uni.adorade.ro/" rel="noopener" target="_blank" aria-label="UniKorn online")
             //- i.fas.fa-external-link-alt.mr-2
             img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
-          a.btn.btn-light.outbound-link(
+          a.btn.btn-light.external-link(
             href="https://github.com/adorade/unikorn" rel="noopener" target="_blank" aria-label="UniKorn github")
             //- i.fab.fa-github.mr-2
             img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
@@ -32,12 +32,12 @@ section.portfolio#portfolio-2
         p.mb-0 Responsive design check tool, see how websites looks on different devices.
         p.mb-4.font-weight-bold #devices #take #screenshots #photo
         .buttons-wrapper
-          a.btn.btn-info.mr-2.outbound-link(
+          a.btn.btn-info.mr-2.external-link(
             href="https://res.adorade.ro" rel="noopener" target="_blank" aria-label="Respo online")
             //- i.fas.fa-external-link-alt.mr-2
             img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
-          a.btn.btn-light.outbound-link(
+          a.btn.btn-light.external-link(
             href="https://github.com/adorade/respo" rel="noopener" target="_blank" aria-label="Respo github")
             //- i.fab.fa-github.mr-2
             img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
@@ -53,11 +53,11 @@ section.portfolio#portfolio-3
         p.mb-0 High Quality WordPress Premium Templates.
         p.mb-4.font-weight-bold #wordpress #themes #plugins #cms
         .buttons-wrapper
-          a.btn.btn-info.mr-2.outbound-link(href="#" aria-label="WebMagia online")
+          a.btn.btn-info.mr-2.external-link(href="#" aria-label="WebMagia online")
             //- i.fas.fa-external-link-alt.mr-2
             img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
-          //- a.btn.btn-light.outbound-link(href="#")
+          //- a.btn.btn-light.external-link(href="#")
           //-   //- i.fab.fa-github.mr-2
           //-   img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
           //-   span.font-weight-bold GitHub
@@ -73,12 +73,12 @@ section.portfolio#portfolio-4
         p.mb-0 A fresh way to save your time, without any distraction.
         p.mb-4.font-weight-bold #time #tasks #get #done
         .buttons-wrapper
-          a.btn.btn-info.mr-2.outbound-link(
+          a.btn.btn-info.mr-2.external-link(
             href="https://timero.adorade.ro" rel="noopener" target="_blank" aria-label="Timero online")
             //- i.fas.fa-external-link-alt.mr-2
             img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
-          a.btn.btn-light.outbound-link(
+          a.btn.btn-light.external-link(
             href="https://github.com/adorade/timero" rel="noopener" target="_blank" aria-label="Timero github")
             //- i.fab.fa-github.mr-2
             img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
