--- a/src/views/includes/sections/_features.pug
+++ b/src/views/includes/sections/_features.pug
@@ -62,4 +62,4 @@ section.features.text-center#features
 
     .row
       .col-12
-        p.mb-0: a.btn.btn-orange.track-link(href="info.html" aria-label="Info") More &#8594;
+        p.mb-0: a.btn.btn-orange.track-link(href="info.html" aria-label="More Info") More &#8594;
