--- a/src/views/includes/thanks/_card.pug
+++ b/src/views/includes/thanks/_card.pug
@@ -6,4 +6,4 @@
 
     .body
       p Your form submission has been received.
-      p: a#back-link(href="/") ← Back to our site
+      p: a.back-link#back-link(href="/" aria-label="Back to site") ← Back to our site
