--- a/src/views/includes/sections/_carousel.pug
+++ b/src/views/includes/sections/_carousel.pug
@@ -27,4 +27,4 @@ section.carousel-portfolio.text-center#carousel-portfolio
 
     .row
       .col
-        p.mb-0: a.btn.btn-orange.track-link(href="portfolio.html" aria-label="Carousel") See our work &#8594;
+        p.mb-0: a.btn.btn-orange.track-link(href="portfolio.html" aria-label="Get Portfolio") See our work &#8594;
