--- a/src/views/mixins/_drawer.pug
+++ b/src/views/mixins/_drawer.pug
@@ -19,6 +19,13 @@ mixin drawerLink(menu)
       - scrOnly = '';
 
     li.nav-item(class=linkActive)
-      a.nav-link(href=menuItem.link)
+      a.nav-link(href=menuItem.link aria-label=`Go to ${menuItem.label}`)
         img.svg-inline--fa.fa-fw.mr-3(id=`fa-${menuItem.icon}` src=`fonts/svgs/solid/${menuItem.icon}.svg` alt=`${menuItem.icon}` inline)
         | #{menuItem.label} !{scrOnly}
+
+//--- Result
+//- li.nav-item.active: a.nav-link(href="./" aria-label="Go to Home") #[span.fa-li #[i.fas.fa-home.fa-fw]] Home
+//- li.nav-item: a.nav-link(href="#!" aria-label="Go to Services") #[span.fa-li #[i.fas.fa-toolbox.fa-fw]] Services
+//- li.nav-item: a.nav-link(href="#!" aria-label="Go to Info") #[span.fa-li #[i.fas.fa-info-circle.fa-fw]] Info
+//- li.nav-item: a.nav-link(href="#!" aria-label="Go to Portfolio") #[span.fa-li #[i.fas.fa-image.fa-fw]] Portfolio
+//- li.nav-item: a.nav-link(href="#!" aria-label="Go to Contact") #[span.fa-li #[i.fas.fa-envelope.fa-fw]] Contact
