--- a/src/views/mixins/_pictures.pug
+++ b/src/views/mixins/_pictures.pug
@@ -6,54 +6,54 @@
 //- Usage: +drawerLogo("name", "alt")
 mixin drawerLogo(name, alt)
   picture
-    source(type="image/webp" data-srcset="images/logo/" + name + ".webp")
-    source(type="image/png" data-srcset="images/logo/" + name + ".png")
+    source(type="image/webp" data-srcset=`images/logo/${name}.webp`)
+    source(type="image/png" data-srcset=`images/logo/${name}.png`)
     img.lazyload.img-fluid(
-      loading="lazy" data-src="images/logo/" + name + ".png" alt=alt)
+      loading="lazy" data-src=`images/logo/${name}.png` alt=alt)
 
 //- Cards Picture
 //------------------------
 //- Usage: +cardsPicture("name", "alt")
 mixin cardsPicture(name, alt)
   picture.card-picture
-    source(type="image/webp" srcset="images/cards/" + name + ".webp")
-    source(type="image/jpeg" srcset="images/cards/" + name + ".jpg")
+    source(type="image/webp" srcset=`images/cards/${name}.webp`)
+    source(type="image/jpeg" srcset=`images/cards/${name}.jpg`)
     img.lazy-cards.lazyload.card-img(
-      loading="lazy" data-src="images/cards/" + name + ".jpg" alt=alt)
+      loading="lazy" data-src=`images/cards/${name}.jpg` alt=alt)
 
 //- Carousel Items
 //------------------------
 //- Usage: +carouselPicture("name", "alt")
 mixin carouselPicture(name, alt)
   picture.carousel-picture
-    source(type="image/webp" srcset="images/portfolio/" + name + ".webp" media="(min-width: 576px)")
-    source(type="image/png" srcset="images/portfolio/" + name + ".png" media="(min-width: 576px)")
-    source(type="image/webp" srcset="images/portfolio/" + name + "-min.webp")
-    source(type="image/png" srcset="images/portfolio/" + name + "-min.png")
+    source(type="image/webp" srcset=`images/portfolio/${name}.webp` media="(min-width: 576px)")
+    source(type="image/webp" srcset=`images/portfolio/${name}-min.webp`)
+    source(type="image/png" srcset=`images/portfolio/${name}.png` media="(min-width: 576px)")
+    source(type="image/png" srcset=`images/portfolio/${name}-min.png`)
     img.lazy-carousel.lazyload.carousel-img(
-      loading="lazy" data-src="images/portfolio/" + name + ".png" alt=alt)
+      loading="lazy" data-src=`images/portfolio/${name}.png` alt=alt)
 
 //- Parallax Picture
 //------------------------
 //- Usage: +parallaxPicture("name", "alt")
 mixin parallaxPicture(name, alt)
   picture.parallax-picture
-    source(type="image/webp" data-srcset="images/hero-unit/" + name + ".webp")
-    source(type="image/jpeg" data-srcset="images/hero-unit/" + name + ".jpg")
+    source(type="image/webp" data-srcset=`images/hero-unit/${name}.webp`)
+    source(type="image/jpeg" data-srcset=`images/hero-unit/${name}.jpg`)
     img.lazy-parallax.lazyload.parallax-img(
-      loading="lazy" data-src="images/hero-unit/" + name + ".jpg" data-speed=".6" alt=alt)
+      loading="lazy" data-src=`images/hero-unit/${name}.jpg` data-speed=".6" alt=alt)
 
 //- Top Banner
 //------------------------
 //- Usage: +banner("name", "alt")
 mixin banner(name, alt)
   picture.masthead-picture
-    source(type="image/webp" srcset="images/top/" + name + ".webp" media="(min-width: 576px)")
-    source(type="image/jpeg" srcset="images/top/" + name + ".jpg" media="(min-width: 576px)")
-    source(type="image/webp" srcset="images/top/" + name + "-min.webp")
-    source(type="image/jpeg" srcset="images/top/" + name + "-min.jpg")
+    source(type="image/webp" srcset=`images/top/${name}.webp` media="(min-width: 576px)")
+    source(type="image/webp" srcset=`images/top/${name}-min.webp`)
+    source(type="image/jpeg" srcset=`images/top/${name}.jpg` media="(min-width: 576px)")
+    source(type="image/jpeg" srcset=`images/top/${name}-min.jpg`)
     img.lazy-top.masthead-img(
-      src="images/top/" + name + "-min.jpg" alt=alt)
+      src=`images/top/${name}-min.jpg` alt=alt)
 
 //- Features Picture
 //------------------------
@@ -61,8 +61,8 @@ mixin banner(name, alt)
 //- services, info, portfolio
 mixin featuresPicture(path, name, type, alt)
   picture.picture-wrapper.shadow-lg
-    source(type="image/webp" srcset="images/" + path + "/" + name + ".webp")
-    source(type="image/png" srcset="images/" + path + "/" + name + ".jpg")
+    source(type="image/webp" srcset=`images/${path}/${name}.webp`)
+    source(type=`image/${type}` srcset=`images/${path}/${name}.${type}`)
     img.lazy-features.lazyload(
-      src="images/" + path + "/" + name + "." + type inline
-      loading="lazy" data-src="images/" + path + "/" + name + "." + type alt=alt)
+      src=`images/${path}/${name}.${type}` inline
+      loading="lazy" data-src=`images/${path}/${name}.${type}` alt=alt)
