refactor(scripts): update components

--- a/src/views/includes/misc/_back-to-top.pug
+++ b/src/views/includes/misc/_back-to-top.pug
@@ -3,6 +3,6 @@
   .back-to-top-icon.d-flex(aria-label="Go to top")
     //- span.sr-only Go to top
     //- i.fas.fa-chevron-up.fa-fw
-    img.svg-inline--fa.fa-fw#fa-chevron-up(src="fonts/svgs/solid/chevron-up.svg" alt="Up" inline)
-    //- svg.svg-inline--fa.fa-fw#fa-chevron-up: use(xlink:href="fonts/sprites/solid.svg#chevron-up")
+    img.svg-inline--fa.fa-1x#fa-chevron-up(src="fonts/svgs/solid/chevron-up.svg" alt="Up" inline)
+    //- svg.svg-inline--fa.fa-1x#fa-chevron-up: use(xlink:href="fonts/sprites/solid.svg#chevron-up")
     .back-to-top-percent
