--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -47,12 +47,14 @@
     position: absolute;
     right: 1rem;
     bottom: .5rem;
-    padding: .5rem;
+    padding: .5625rem .75rem;
     margin: 0;
+    overflow: hidden;
+    border-radius: .25rem;
     background: $gray;
     background: rgba($gray, .5);
     color: #f8f9fa;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     text-align: center;
     transition: all .5s ease-in-out;
     cursor: pointer;
