--- a/src/scss/mixins/_picture.scss
+++ b/src/scss/mixins/_picture.scss
@@ -5,17 +5,23 @@
 @mixin parent($ratio) {
   position: relative;
   display: block;
-  height: auto;
+  height: 0;
   padding-bottom: percentage(nth($ratio, 2) / nth($ratio, 1)); // Intrisic ratio
   background-color: var(--background-color-normal);
 }
 
-@mixin child() {
+@mixin childTop() {
   position: absolute;
-  top: 50%;
+  top: -35%;
   left: 50%;
   width: 100%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
+}
+
+@mixin child($ratio) {
+  width: 100%;
+  height: auto;
+  aspect-ratio: #{nth($ratio, 1) + "/" + nth($ratio, 2)};
 }
 
 @mixin filter() {
@@ -24,7 +30,7 @@
   filter: grayscale(90%) blur(10px);
 }
 
-@mixin picture($ratio: 1 1, $selector: "> :first-child", $filter: true) {
+@mixin picture($ratio: 1 1, $selector: "> :first-child", $banner: true, $filter: true) {
   $selector: unquote($selector);
 
   // parent
@@ -35,7 +41,11 @@
 
   // child
   #{$selector} {
-    @include child();
+    @if $banner {
+      @include childTop();
+    } @else {
+      @include child($ratio);
+    }
   }
 }
 
@@ -47,10 +57,6 @@
 
   // child
   #{$selector} {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    @include child($ratio);
   }
 }
