--- a/src/scss/components/_features.scss
+++ b/src/scss/components/_features.scss
@@ -3,8 +3,9 @@
 // -----------------------------------------------------------------------------
 
 .features {
-  background-color: var(--background-color-normal);
-  color: var(--text-color);
+  // NOTE: see `pages/_pages.scss`
+  // background-color: var(--background-color-normal);
+  // color: var(--text-color);
 
   .card {
     margin: 0;
