--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .newsletter {
-  background-color: var(--background-color-dark);
-  color: var(--text-color);
+  // NOTE: see `pages/_pages.scss`
+  // background-color: var(--background-color-dark);
+  // color: var(--text-color);
 }
