--- a/src/views/modules/header/_header-features.pug
+++ b/src/views/modules/header/_header-features.pug
@@ -2,7 +2,7 @@
 include ../../mixins/_pictures
 
 header.masthead.bg-dark
-  +banner("info", "Info")
+  +banner("features", "Features")
   .mastehead-overlay
     h1.mb-0 Features for You
     h6.mb-0 Dream Big. Think Different. Do Better
