--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -1,7 +1,7 @@
 //- includes/sections/_hero.pug
 section.hero#hero
   .hero-unit
-    .hero-image
+    .hero-image.skale
     .hero-overlay
     .hero-content.text-center
       h1.hero-title.mb-0 Adorade
