--- a/src/scss/mixins/_picture.scss
+++ b/src/scss/mixins/_picture.scss
@@ -12,10 +12,18 @@
 
 @mixin childTop() {
   position: absolute;
-  top: -35%;
+  top: 0;
   left: 50%;
   width: 100%;
   transform: translate(-50%, 0);
+
+  @media screen and (min-width: 992px) {
+    top: -20%;
+  }
+
+  @media screen and (min-width: 1200px) {
+    top: -35%;
+  }
 }
 
 @mixin child($ratio) {
