--- a/src/scss/mixins/_picture.scss
+++ b/src/scss/mixins/_picture.scss
@@ -6,7 +6,7 @@
   position: relative;
   display: block;
   height: 0;
-  padding-bottom: percentage(nth($ratio, 2) / nth($ratio, 1)); // Intrisic ratio
+  padding-bottom: percentage(calc(nth($ratio, 2) / nth($ratio, 1))); // Intrisic ratio
   background-color: var(--background-color-normal);
 }
 
