chore(deps): update stylelint packages

--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -1,6 +1,8 @@
 //
 // Variables
 // -----------------------------------------------------------------------------
+// stylelint-disable scss/dollar-variable-colon-space-before
+// stylelint-disable scss/dollar-variable-empty-line-before
 
 // Colors
 // -----------------------------
