--- a/src/scss/includes/_animation.scss
+++ b/src/scss/includes/_animation.scss
@@ -15,7 +15,7 @@
 }
 
 // For Forms validation
-@keyframes shakeX {
+@keyframes shake-x {
   from,
   to {
     transform: translate3d(0, 0, 0);
@@ -47,8 +47,8 @@
   }
 }
 
-.shakeX {
-  animation-name: shakeX;
+.shake-x {
+  animation-name: shake-x;
 }
 
 .skale {
