--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -78,3 +78,27 @@
     background-color: rgba($primary-color, .7);
   }
 }
+
+.get-in-touch {
+  position: fixed;
+  right: 1rem;
+  bottom: .5rem;
+  z-index: 21;
+  width: 8rem;
+  padding: .5625rem .75rem;
+  background-color: #139e41;
+  color: #f8f9fa;
+  font-size: .75rem;
+  font-weight: 900;
+  text-align: center;
+  transition: all .5s ease-in-out;
+
+  &.shrink {
+    transform: translate(-3.5rem);
+  }
+
+  &:hover {
+    background-color: #008a2d;
+    color: #fff;
+  }
+}
