--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -30,6 +30,7 @@ html(lang="en" prefix="og: http://ogp.me/ns#")
         include ../modules/footer/_footer
     block modal
       include ../includes/forms/_modal-get-quote
+    include ../includes/misc/_get-in-touch
     include ../includes/misc/_back-to-top
     block scripts
       include ../partials/_scripts
